added testNegativeDaysBack()